--- a/OpenType/OpenType.csproj
+++ b/OpenType/OpenType.csproj
@@ -22,4 +22,8 @@
     <Folder Include="Internal\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="_fontSource.txt" />
+  </ItemGroup>
+
 </Project>
